--- a/uhl.shannon/wmn608/uhl.shanon/lib/css/styleguide.css
+++ b/uhl.shannon/wmn608/uhl.shanon/lib/css/styleguide.css
@@ -10,6 +10,10 @@
 	--color-neutral-medium:#BF5B45;
 	--color-neutral-dark:#593325;
 
+	--color-main-light:lightblue;
+	--color-main-medium:blue;
+	--color-main-dark:darkblue;
+
 	--color-black:#919191;
 	--color-white:#eeeeee;
 	--color-blue:#D0E9F2;
@@ -90,6 +94,14 @@ small:hover {
 .flex-justify-center { justify-content:center; }
 
 
+/*Small Classes*/
+
+	.media-image {
+		max-width:100%;
+		vertical-align: text-bottom;
+	}
+
+
 /* COMPONENT CLASS */
 
 .nav ul {
@@ -98,6 +110,93 @@ small:hover {
 	margin-bottom: 0;
 	padding-left: 0;
 }
+
+	.nav a {
+		display:block;
+		padding:0.2em 0.5em;
+	}
+
+	.nav a:hover {
+		background-color: var(--color-main-medium);
+		color: var(--color-white);
+		text-decoration:none;
+	}
+
+	.nav .active a {
+		background-color: var(--color-main-light);
+		color: inherit;
+	}
+
+	.nav-material ul,
+	.nav-crumbs ul,
+	.nav-pills ul,
+	.nav-stretch ul,
+	.nav-flex ul{
+		display:flex;
+	}
+
+	.nav-material li,
+	.nav-stretch li {
+		flex: 1 1 auto;
+		text-align:center;
+	}
+
+	.nav-pills a {
+		border-radius:2em;
+		padding: 0.5em 1em;
+	}
+
+.nav-crumbs a{
+		display: inline-block;
+	}
+
+	.nav-crumbs .active a,
+	.nav-crumbs a:hover {
+		background-color: transparent;
+		color: inherit;
+		text-decoration: underline;
+	}
+
+	.nav-crumbs li:not(:first-child)::before {
+		content:'/';
+	}
+
+	.nav-material a {
+		padding: 0.5em 1em;
+		position: relative;
+	}
+
+	.nav-material .active a {
+		background-color: transparent;
+		color: inherit;
+	}
+
+	.nav-material a:hover {
+		background-color:var(--color-neutral-light);
+		color: inherit;
+	}
+
+	.nav-material a::after {
+		content: '';
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		height: 0;
+		background-color:var(--color-main-medium);
+		transition: all 0.3s;
+	}
+
+
+	.nav-material .active a::after {
+		height: 4px;
+	}
+
+
+
+
+
+
 
 
 .navbar {
@@ -194,6 +293,60 @@ small:hover {
 	transform: translate(-25%, -25%);
 	color: var(--color-neutral-light);
 }
+
+
+/* TABLES */
+.table{
+	width:100%;
+	border-collapse:collapse;
+}
+.table th,
+.table td {
+	text-align:left;
+	padding:0.2em 0.5em;
+}
+
+.table.striped tbody tr:nth-child(odd) {
+	background-color: var(--color-neutral-light);
+
+}
+
+.table.lined.all th:not(:first-child),
+.table.lined.all td:not(:first-child),
+.table.lined.vertical th:not(:first-child),
+.table.lined.vertical td:not(:first-child) {
+	border-left: 1px solid var(--color-neutral-medium);
+
+}
+
+.table.lined.all tbody tr,
+.table.lined.all tbody tr {
+	border-top: 1px solid var(--color-neutral-medium);
+
+}
+
+.table.lined.all,
+.table.lined.border {
+	border: 1px solid var(--color-neutral-medium);
+
+}
+
+
+/* Figure */
+.figure {
+	margin: 0;
+	background-color: var(--color-white);
+}
+.figure img {
+	width: 100%;
+	vertical-align: text-bottom;
+
+}
+.figure figcaption {
+	padding: 1em;
+}
+
+
 
 
 
