--- a/uhl.shannon/wmn608/uhl.shanon/lib/css/styleguide.css
+++ b/uhl.shannon/wmn608/uhl.shanon/lib/css/styleguide.css
@@ -296,7 +296,7 @@ small:hover {
 
 
 /* TABLES */
-.table{
+.table {
 	width:100%;
 	border-collapse:collapse;
 }
@@ -346,6 +346,38 @@ small:hover {
 	padding: 1em;
 }
 
+/* Color */
+  .circle-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: fit-content;
+  }
+
+  .circle {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+  }
+
+  .circle:nth-child(1) { background-color: #ff6347; }
+  .circle:nth-child(2) { background-color: #4682b4; }
+  .circle:nth-child(3) { background-color: #7cfc00; }
+  .circle:nth-child(4) { background-color: #ffd700; }
+  .circle:nth-child(5) { background-color: #ff69b4; }
+  .circle:nth-child(6) { background-color: #40e0d0; }
+  .circle:nth-child(7) { background-color: #9370db; }
+  .circle:nth-child(8) { background-color: #ffa07a; }
+  .circle:nth-child(9) { background-color: #20b2aa; }
 
 
 
