--- a/uhl.shannon/wmn608/uhl.shanon/lib/css/styleguide.css
+++ b/uhl.shannon/wmn608/uhl.shanon/lib/css/styleguide.css
@@ -6,17 +6,23 @@
 }
 
 :root {
-	--color-neutral-light:#D9CDBF;
-	--color-neutral-medium:#BF5B45;
-	--color-neutral-dark:#593325;
+	--color-offwhite: #f2f2f2;
+	
+   --color-neutral-light:#d9d9d9;
+    --color-neutral-medium:#626262;
+    --color-neutral-dark:#3b3b3b;
 
-	--color-main-light:lightblue;
-	--color-main-medium:blue;
-	--color-main-dark:darkblue;
+    --color-main-lightblue: #046cb3;
+    --color-main-mediumblue: #036bb2;
+    --color-main-darkblue: #024959;
 
-	--color-black:#919191;
-	--color-white:#eeeeee;
-	--color-blue:#D0E9F2;
+    --color-accent-lightred:#bf0413;
+    --color-accent-mediumred: #9c030d;
+    --color-accent-darkred: #4a0106;
+
+    --color-lightyellow: #f2bb13;
+    --color-mediumyellow: #cf9f11;
+    --color-darkyellow: #a6800d;
 
 	--header-height:3rem;
 	--spacing:1rem;
@@ -51,7 +57,7 @@ a {
 
 a:hover {
 	text-decoration: underline;
-	color: var(--color-neutral-dark);
+	color: var(--color-offwhite);
 }
 
 button {
@@ -59,12 +65,12 @@ button {
 }
 
 button:hover {
-	background-color: var(--color-neutral-light);
-	color: var(--color-neutral-medium);
+	background-color: var(--color-accent-lightred);
+	color: var(--color-neutral-dark);
 }
 
 small:hover {
-	color: var(--color-neutral-medium);
+	color: var(--color-accent-lightred);
 }
 
 /* LAYOUT CLASSES */
@@ -121,13 +127,13 @@ small:hover {
 	}
 
 	.nav a:hover {
-		background-color: var(--color-main-medium);
-		color: var(--color-white);
+		background-color: var(--color-accent-lightred);
+		color: var(--color-offwhite);
 		text-decoration:none;
 	}
 
 	.nav .active a {
-		background-color: var(--color-main-light);
+		background-color: var(--color-offwhite);
 		color: inherit;
 	}
 
@@ -176,7 +182,7 @@ small:hover {
 	}
 
 	.nav-material a:hover {
-		background-color:var(--color-neutral-light);
+		background-color:var(--color-offwhite);
 		color: inherit;
 	}
 
@@ -187,7 +193,7 @@ small:hover {
 		left: 0;
 		width: 100%;
 		height: 0;
-		background-color:var(--color-main-light);
+		background-color:var(--color-main-lightblue);
 		transition: all 0.3s;
 	}
 
@@ -204,8 +210,8 @@ small:hover {
 
 
 .navbar {
-	background-color: var(--color-neutral-medium);
-	color: var(--color-neutral-light);
+	background-color: var(--color-main-darkblue);
+	color: var(--color-lightyellow);
 	line-height:var(--header-height);
 
 }
@@ -224,10 +230,14 @@ small:hover {
 	left: 0;
 	bottom: 0;
 	width: 100%;
-	background-color: var(--color-neutral-medium);
-	color: var(--color-neutral-light);
-	text-align: center;
+	background-color: var(--color-main-darkblue);
+	color: var(--color-lightyellow);
 }
+
+.footer ul {
+	display: inline-block;
+}
+
 
 /* CARD */
 
@@ -242,22 +252,22 @@ small:hover {
 }
 
 	.card.soft {
-			border-radius:0.5em;
+			border-radius:0.2em;
 			box-shadow: 0 0 10px rgba(0,0,0,0.1);
 		}
 
 	.card.hard {
 		border-radius:0.2em;
-		border:2px solid var(--color-neutral-medium);
+		border:2px solid var(--color-main-mediumblue);
 	}
 
 	.card.dark {
-		background-color:var(--color-neutral-dark);
-		color:var(--color-nuetral-light);
+		background-color:var(--color-main-darkblue);
+		color:var(--color-main-lightblue);
 	}
 
 	.card.light {
-		background-color:var(--color-neutral-light);
+		background-color:var(--color-main-lightblue);
 
 	}
 
@@ -278,9 +288,8 @@ small:hover {
 
 .hero {
 	height: 500px;
-	background: rgba(0, 0, 0, .30);
-	background-blend-mode: darken;
 	background-position: center;
+	background: darken;
 	background-repeat: no-repeat;
 	background-size: cover;
 	position: relative;
@@ -292,10 +301,10 @@ small:hover {
 .hero-text {
 	text-align: center;
 	position: absolute;
-	top: 7%;
+	bottom: 7%;
 	left: 45%;
 	transform: translate(-25%, -25%);
-	color: var(--color-neutral-light);
+	color: var(--color-accent-lightred);
 }
 
 
@@ -425,7 +434,7 @@ small:hover {
 }
 
 .form-button {
-    background-color: var(--color-neutral-light);
+    background-color: var(--color-offwhite);
     padding: 0.5em 1em;
     border-radius: 0.2em;
     cursor: pointer;
@@ -433,11 +442,11 @@ small:hover {
 }
 
 .form-button:hover {
-	background-color: var(--color-main-medium);
+	background-color: var(--color-accent-lightred);
 	text-decoration: none;
 }
 .form-button:active {
-	background-color: var(--color-main-light);
+	background-color: var(--color-lightyellow);
 }
 
 .hotdog {
@@ -447,12 +456,12 @@ small:hover {
 	display: flex;
 }
 
-.hotdog.dark {
+.hotdog-dark {
 	background-color: var(--color-neutral-dark);
 	color: var(--color-neutral-light);
 }
 
-.hotdog.light {
+.hotdog-light {
 	background-color: var(--color-white);
 	color: var(--color-black);
 }
