--- a/uhl.shannon/wmn608/uhl.shanon/css/storetheme.css
+++ b/uhl.shannon/wmn608/uhl.shanon/css/storetheme.css
@@ -163,6 +163,14 @@ body{
 	object-fit: contain;
 }
 
+span.badge:not(:empty)::after {
+	content: ')';
+}
+
+span.badge:not(:empty)::before {
+	content: '(';
+}
+
 
 
 
