--- a/uhl.shannon/wmn608/uhl.shanon/css/storetheme.css
+++ b/uhl.shannon/wmn608/uhl.shanon/css/storetheme.css
@@ -20,9 +20,11 @@
 
 }
 
-body{
- background-color:var(--color-offwhite);
- padding-bottom: 4em;
+body {
+    background-image: url('/../img/background.jpg');
+    background-repeat: no-repeat; /* Prevent the background image from repeating */
+    background-size: cover; /* Cover the entire background area */
+    background-position: center; /* Center the background image */
 }
 
 
@@ -46,19 +48,33 @@ body{
 		padding-right:1em;
 	}
 	.navbar h1 {
-		padding-left:0.3em;
+		padding-left:0.5em;
 	}
 }
-
-@media (max-width:932px) {
-	.navbar .display-flex {
+.menu-button label { display:none; }
+@media (max-width:400px) {
+	.navbar .display-flex{
+		flex-wrap: wrap;
+	}
+	.navbar .nav {
+		width: 100%;
+		display: none;
+	}
+	.navbar .nav-flex ul {
 		display:block;
 	}
 	.navbar .nav li {
-		padding-left:0.5em;
 		line-height:2em;
 	}
 
+	.menu-button label {
+		display: block;
+		padding: 0 1em;
+	}
+
+	#menu:checked+.navbar .nav {
+    display: block;
+}
 }
 
 
